# AtlasIMS

./: docker-compose.yml
backend/: Makefile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e1c00c74df4e_initial_schema.py
backend/app/: main.py
backend/app/core/: database.py
backend/app/modules/inventory/: models.py  router.py  services.py
backend/app/modules/orders/: models.py  router.py  services.py
backend/app/modules/warehouse/: models.py
backend/core/: config.py  database.py
backend/modules/inventory/: endpoints.py  models.py  services.py
backend/modules/orders/: endpoints.py
backend/modules/products/: endpoints.py  models.py
backend/modules/warehouse/: endpoints.py
